@startuml
'https://plantuml.com/class-diagram


'Layout Format---------------------------------------------
left to right direction
hide circle
skinparam classAttributeIconSize 0


Resource -d[hidden]--> Project
Resource -d[hidden]-> SystemUser


title Domain Model


'Project Aggregate:--------------------------------------------------
class Project #Yellow{
-code
-customer
-businessSector
-status
-numberOfSprints
-budget
-sprintDuration
}


'Resource Aggregate:--------------------------------------------------
class Resource #Gold{
-startDate
-endDate
-CostPerHour
-Allocation
-Role
}

Resource "*" -> "1" SystemUser: is linked to
Resource "*" --> "1" Project: is allocated to



'SystemUser Aggregate:--------------------------------------------------
class SystemUser #LightCyan {
-email
-name
-function
-photo
-state
}

@enduml